--- a/gradle.properties
+++ b/gradle.properties
@@ -48,7 +48,7 @@ mod_name=Cheesables
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=2.1.0
+mod_version=2.1.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -56,4 +56,4 @@ mod_group_id=com.duzo.cheesy
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Duzo
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=A very cheesy themed mod :??P(())_()A UFEGYPSDHGKFG dygfdfc unhf uh 
+mod_description=cheesehechescheesescheesechese
